objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the candidate who applied for this job</description>
        <inlineHelpText>Name of the candidate who applied for this job</inlineHelpText>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>JD/Responsibilities of the available position.</description>
        <inlineHelpText>JD/Responsibilities of the available position</inlineHelpText>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Title of the Job</description>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Job Application as of now</description>
        <inlineHelpText>Status of the Job Application as of now</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Interview-in-progress</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA# {000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>